Add routing to legal pages (#1077)
* Add table formatting

* Rename nested section appropriately

* Add legal pages parsing/routing

* Add titles to all pages

* Clean up

* Unbump gfm

* Make legal pages open in same window

* Adjust headings

* Fix scrolling

* Fix eslint

* Fix terms anchors

--- a/apps/site/src/_pages/legal/0_index.mdx
+++ b/apps/site/src/_pages/legal/0_index.mdx
@@ -7,39 +7,39 @@ topics:
   - Legal
 ---
 
-# Legal
+# Legal Policies & Terms
 
-## Quick-links
+### Quick-links
 
-### Using the Block Protocol
+#### Using the Block Protocol
 
-- [Terms of Service](terms)
-- [Corporate Terms of Service](terms-corporate)
-- [Terms for Additional Products and Features](terms/product)
-- [Community Guidelines](community)
-- [Acceptable Use Policy](acceptable-use)
-  - [Bullying and Harassment](acceptable-use/bullying)
-  - [Disruptive Behavior](acceptable-use/disruption)
-  - [Doxxing and Invasion](acceptable-use/doxxing)
-  - [Hate Speech and Discrimination](acceptable-use/discrimination)
-  - [Impersonation](acceptable-use/impersonation)
-  - [Malware and Exploits](acceptable-use/malware)
-  - [Misinformation and Disinformation](acceptable-use/veracity)
-  - [Obscene Content](acceptable-use/obscenity)
-  - [Violent Content](acceptable-use/violence)
-- [Reporting Abuse or Spam](acceptable-use/reports)
-- [Appeals Policy](acceptable-use/appeals)
+- [Terms of Service](/legal/terms)
+- [Corporate Terms of Service](/legal/terms-corporate)
+- [Terms for Additional Products and Features](/legal/terms/product)
+- [Community Guidelines](/legal/community)
+- [Acceptable Use Policy](/legal/acceptable-use)
+  - [Bullying and Harassment](/legal/acceptable-use/bullying)
+  - [Disruptive Behavior](/legal/acceptable-use/disruption)
+  - [Doxxing and Invasion](/legal/acceptable-use/doxxing)
+  - [Hate Speech and Discrimination](/legal/acceptable-use/discrimination)
+  - [Impersonation](/legal/acceptable-use/impersonation)
+  - [Malware and Exploits](/legal/acceptable-use/malware)
+  - [Misinformation and Disinformation](/legal/acceptable-use/veracity)
+  - [Obscene Content](/legal/acceptable-use/obscenity)
+  - [Violent Content](/legal/acceptable-use/violence)
+- [Reporting Abuse or Spam](/legal/acceptable-use/reports)
+- [Appeals Policy](/legal/acceptable-use/appeals)
 
-### Privacy
+#### Privacy
 
-- [Privacy Statement](privacy)
-- [Data Protection Agreement](terms/dpa)
-- [List of Sub-processors](privacy/subprocessors)
-- [Information about Cookies](privacy/cookies)
-- [Private Information Removal Policy](privacy/private-information-removal)
-- [Guidelines for Legal Requests of Block Protocol User Data](privacy/user-data-legal-requests)
+- [Privacy Statement](/legal/privacy)
+- [Data Protection Agreement](/legal/terms/dpa)
+- [List of Sub-processors](/legal/privacy/subprocessors)
+- [Information about Cookies](/legal/privacy/cookies)
+- [Private Information Removal Policy](/legal/privacy/private-information-removal)
+- [Guidelines for Legal Requests of Block Protocol User Data](/legal/privacy/user-data-legal-requests)
 
-## Submitting requests
+### Submitting requests
 
 Please serve requests and notices to:
 
