--- a/apps/site/src/_pages/legal/acceptable-use/11_appeals.mdx
+++ b/apps/site/src/_pages/legal/acceptable-use/11_appeals.mdx
@@ -13,11 +13,13 @@ topics:
   - Legal
 ---
 
-## Appeal and Reinstatement
+# Appeals
+
+### Appeal and Reinstatement
 
 While the majority of interactions between individuals in the Block Protocol’s community fall within our [Acceptable Use Policies](/legal/acceptable-use) and [Community Guideline](/legal/community), violations of those policies do occur at times. When they do, Block Protocol personnel may need to take enforcement action to address the violations. However, in some cases there may be a basis to reverse a moderation action taken by Block Protocol personnel.
 
-## What are appeals and reinstatements?
+### What are appeals and reinstatements?
 
 Both appeals and reinstatements arise in relation to disabling of content or restrictions to access an account.
 
@@ -25,7 +27,7 @@ Both appeals and reinstatements arise in relation to disabling of content or res
 
 **Appeal**: The user disputes that a violation occurred and can provide additional information to show that a different decision should have been reached.
 
-## How this works
+### How this works
 
 If your account or content has been hidden, disabled, or limited in any other way by the Block Protocol and you would like to request reinstatement or appeal our decision, please reach out using our [contact form](/contact).
 
@@ -43,6 +45,6 @@ If the Block Protocol reviewer is the same person who made the initial determina
 
 If your content was impacted by a DMCA notice, and you’d like to make changes or dispute that notice, please contact the Block Protocol _via HASH_ by following the [HASH DMCA counter-notice guide](https://hash.ai/legal/copyright-dmca-counter-notice).
 
-## Transparency
+### Transparency
 
 We track all appeals and reinstatements. In the future, we plan to publish aggregate data surrounding these processes annually as part of our planned transparency reporting.
