--- a/apps/site/src/_pages/legal/privacy/1_private-information-removal.mdx
+++ b/apps/site/src/_pages/legal/privacy/1_private-information-removal.mdx
@@ -11,22 +11,24 @@ topics:
   - Legal
 ---
 
+# Private Information Removal Policy
+
 We offer this private information removal process as an exceptional service only for high-risk content that violates the [Block Protocol Terms of Service](/legal/acceptable-use#3-conduct-restrictions), such as when your security is at risk from exposed access credentials. This guide describes the information the Block Protocol needs from you in order to process a request to remove private information from a project.
 
-## What is Private Information?
+### What is Private Information?
 
 For the purposes of this document, “private information” refers to content that (i) should have been kept confidential, _and_ (ii) whose public availability poses a specific or targeted security risk to you or your organization.
 
 "Security risk" refers to a situation involving exposure to physical danger, identity theft, or increased likelihood of unauthorized access to physical or network facilities.
 
-### Private information removal requests are appropriate for
+#### Private information removal requests are appropriate for
 
 - Access credentials, such as user names combined with passwords, access tokens, or other sensitive secrets that can grant access to your organization's server, network, or domain.
 - AWS tokens and other similar access credentials that grant access to a third party on your behalf. You must be able to show that the token does belong to you.
 - Documentation (such as network diagrams or architecture) that poses a specific security risk for an organization.
 - [Information](/legal/acceptable-use/doxxing) related to, and posing a security risk to, you as an individual (such as social security numbers or other government identification numbers).
 
-### Private information removal requests are _not_ appropriate for
+#### Private information removal requests are _not_ appropriate for
 
 - **Internal server names, IP addresses, and URLs, on their own.** You must be able to show that their use in a particular file or piece of code poses a security threat. The [National Institute of Standards and Technology](https://en.wikipedia.org/wiki/National_Institute_of_Standards_and_Technology) explicitly advises against relying on "security through obscurity".
 - **Mere mentions of your company's identity, name, brand, domain name, or other references to your company in files on the Block Protocol.** You must be able to articulate why a use of your company's identity is a threat to your company's security posture. See the [Block Protcool Impersonation Policy](/legal/acceptable-use/impersonation) and [HASH Trademark Complaints Policy](https://hash.ai/legal/trademark-complaints) for more information.
@@ -36,7 +38,7 @@ For the purposes of this document, “private information” refers to content t
 - **Privacy complaints.** If you wish to access, transfer, change, or delete your personal information on the Block Protocol, please contact us via [our Support website](/contact).
 - **Content governed by our [Community Guidelines](/legal/community) and [Acceptable Use](/legal/acceptable-use) policies**, such as [malware](/legal/acceptable-use/malware) or general-purpose tools. If you have questions about our Community Guidelines or believe that content on the Block Protocol might violate our guidelines, you can [contact us](/contact).
 
-## Things to Know
+### Things to Know
 
 **Ask Nicely First.** A great first step before sending us a request to remove data is to try contacting the user directly. They may have listed contact information on their public profile page or in a project's README, or you could get in touch by creating a discussion or comment-thread on the project. This is not strictly required, but it is appreciated.
 
@@ -46,7 +48,7 @@ For the purposes of this document, “private information” refers to content t
 
 **Processing Time.** While we do process private information removal requests as quickly as possible, due to the volume of requests we process, it may take some time for your request to be reviewed. Additional requests, or multiple requests from additional points of contact, may result in delays.
 
-## How Does This Actually Work?
+### How Does This Actually Work?
 
 1.  **Complainant Investigates.** It is up to the requesting party to conduct their own investigation and to provide us with the [details we require](#your-request-must-include) — most importantly, an explanation of how the data poses a security risk. The Block Protocol is not in a position to search for or make initial determinations about private information on any individual's or organization's behalf.
 
@@ -64,7 +66,7 @@ OR
 
 7.  **User May Request an Additional Window to Make Changes.** If the user missed their opportunity to remove the private information specified in the notice, we may allow them an additional window of approximately 1 business day, upon request, to make those changes. In that event, the Block Protocol will notify the complainant.
 
-### What About Forks? (or What's a Fork?)
+#### What About Forks? (or What's a Fork?)
 
 **The Block Protocol allows users to "fork" one another's projects.** In essence, this means that users can make a copy of a project such as a type or a block in the [Block Protocol Hub](/hub) into their own namespace. As the license or the law allows, users can then make changes to that fork to either push back to the main project or just keep as their own variation of a project. Each of these copies is a "fork" of the original project, which in turn may also be called the "parent" of the fork.
 
@@ -72,13 +74,13 @@ OR
 
 If at the time that you submitted your notice, you identified all existing forks of that projects, we would process a valid claim against all forks in that network at the time we process the notice. We would do this given the likelihood that all newly created forks would contain the same content. In addition, if the reported network that contains the reported content is larger than one hundred (100) projects and thus would be difficult to review in its entirety, we may consider disabling the entire network if you state in your notice that, based on the representative number of forks you have reviewed, you believe that all or most of the forks contain the content reported in the parent project.
 
-## Sending A Private Information Removal Request
+### Sending A Private Information Removal Request
 
 **Make your request specific.** Due to the type of content the Block Protocol hosts (mostly software code) and the way that content is managed (with Git), we need complaints to be as specific as possible. In order for us to verify that a user has removed reported private information completely, we need to know exactly where to look.
 
 These guidelines are designed to make the processing of requests to remove private information as straightforward as possible.
 
-### Your Request Must Include
+#### Your Request Must Include
 
 1.  A working, clickable link to each file within a project containing private information. (Note that we're not able to work from search results, examples, or screenshots.)
 1.  Specific line numbers within each file containing the private information.
@@ -86,10 +88,10 @@ These guidelines are designed to make the processing of requests to remove priva
 1.  If you are a third party acting as an agent for an organization facing a security risk, include a statement that you have a legal right to act on behalf of that organization.
 1.  **Optional:** Let us know if your request is particularly urgent, and why. We respond to all private information removal requests as quickly as possible. However, if this request is especially time-sensitive, such as a very recent credential exposure, please explain why.
 
-## How to Submit Your Request
+### How to Submit Your Request
 
 You can submit your request to remove private information via our [contact form](/contact). Please include a plain-text version of your request in the body of your message. Sending your request in an attachment may result in processing delays.
 
-## Disputes
+### Disputes
 
 If you received a private information removal request from us, you can dispute it by replying to our email and letting us know — in as much detail as possible — why you think the content in question is not private information subject to this Policy.
