--- a/apps/site/src/_pages/legal/privacy/2_user-data-legal-requests.mdx
+++ b/apps/site/src/_pages/legal/privacy/2_user-data-legal-requests.mdx
@@ -11,6 +11,8 @@ topics:
   - Legal
 ---
 
+# Legal Requests of User Data
+
 Are you a law enforcement officer conducting an investigation that may involve user content hosted on the Block Protocol? Or maybe you're a privacy-conscious person who would like to know what information we share with law enforcement and under what circumstances. Either way, you're on the right page.
 
 In these guidelines, we provide a little background about what the Block Protocol is, the types of data we have, and the conditions under which we will disclose private user information. Before we get into the details, however, here are a few important details you may want to know:
@@ -19,7 +21,7 @@ In these guidelines, we provide a little background about what the Block Protoco
 - We will not disclose **location-tracking data**, such as IP address logs, without a [valid court order or search warrant](#with-a-court-order-or-a-search-warrant).
 - We will not disclose any **private user content**, including the contents of private repositories, without a valid [search warrant](#only-with-a-search-warrant).
 
-## About these guidelines
+### About these guidelines
 
 Our users trust us with their data, software projects and code—often some of their most valuable business or personal assets. Maintaining that trust is essential to us, which means keeping user data safe, secure, and private.
 
@@ -27,7 +29,7 @@ While the overwhelming majority of our users use the Block Protocol's services t
 
 By providing public guidelines for law enforcement personnel, we hope to strike a balance between the often competing interests of user privacy and justice. We hope these guidelines will help to set expectations on both sides, as well as to add transparency to the Block Protocol's internal processes. Our users should know that we value their private information and that we do what we can to protect it. At a minimum, this means only releasing data to third-parties when the appropriate legal requirements have been satisfied. By the same token, we also hope to educate law enforcement professionals about the Block Protocol's systems so that they can more efficiently tailor their data requests and target just that information needed to conduct their investigation.
 
-## Block Protocol terminology
+### Block Protocol terminology
 
 Before asking us to disclose data, it may be useful to understand how our system is implemented. The Block Protocol hosts a wide variety of projects, in a variety of different ways, including [Git repositories](https://git-scm.com/video/what-is-version-control). Projects on the Block Protocol—which may be public or private—are most commonly used for software development projects, but are also often used to work on content of all kinds.
 
@@ -41,11 +43,11 @@ Before asking us to disclose data, it may be useful to understand how our system
 
 - **Projects** — The term _project_ can be used to describe one or more entities, types, blocks, services, or other [Block Protocol Hub](/hub) listings. A project may contain one or more files (including documentation), as well as revision history and other metadata. Projects can have multiple collaborators and, at its administrators' discretion, may be publicly viewable or not.
 
-## User data on the Block Protocol
+### User data on the Block Protocol
 
 Here is a non-exhaustive list of the kinds of data we maintain about users and projects on the Block Protocol.
 
-### Public account data
+#### Public account data
 
 There is a variety of information publicly available on the Block Protocol about users and their repositories.
 
@@ -69,7 +71,7 @@ All user public profiles display:
 - Organizations to which the user is a member (_depending on either the organizations' or the users' preferences_)
 - Badges or awards the user has received
 
-### Private account data
+#### Private account data
 
 The Block Protocol also collects and maintains certain private information about users as outlined in our [Privacy Statement](/legal/privacy). This may include:
 
@@ -78,7 +80,7 @@ The Block Protocol also collects and maintains certain private information about
 - Security access logs
 - Data about interactions with private repositories
 
-### Organization account data
+#### Organization account data
 
 Information about organizations, their administrative users and repositories is publicly available on the Block Protocol.
 
@@ -96,7 +98,7 @@ Information about organizations, their administrative users and repositories is 
 - Associated accounts, including users who are members
 - Collaborators
 
-### Public repository data
+#### Public repository data
 
 You can browse almost any public repository to get a sense for the information that the Block Protocol collects and maintains about projects. This can include:
 
@@ -109,27 +111,27 @@ You can browse almost any public repository to get a sense for the information t
 - User-created project documentation
 - Statistics and graphs showing contributions to the project and the network of contributors
 
-### Private repository data
+#### Private repository data
 
 The Block Protocol collects and maintains the same type of data for private repositories that can be seen for public repositories, except only specifically invited users may access private repository data.
 
-### Other data
+#### Other data
 
 Additionally, the Block Protocol collects analytics data such as page visits and information occasionally volunteered by our users (such as communications with our support team, survey information and/or site registrations).
 
-## We will notify any affected account owners
+### We will notify any affected account owners
 
 It is our policy to notify users about any pending requests regarding their accounts or repositories, unless we are prohibited by law or court order from doing so. Before disclosing user information, we will make a reasonable effort to notify any affected account owner(s) by sending a message to their verified email address providing them with a copy of the subpoena, court order, or warrant so that they can have an opportunity to challenge the legal process if they wish. In (rare) exigent circumstances, we may delay notification if we determine delay is necessary to prevent death or serious harm or due to an ongoing investigation.
 
-## Disclosure of non-public information
+### Disclosure of non-public information
 
 It is our policy to disclose non-public user information in connection with a civil or criminal investigation only with user consent or upon receipt of a valid subpoena, civil investigative demand, court order, search warrant, or other similar valid legal process. In certain exigent circumstances (see below), we also may share limited information but only corresponding to the nature of the circumstances, and would require legal process for anything beyond that. The Block Protocol reserves the right to object to any requests for non-public information. Where the Block Protocol agrees to produce non-public information in response to a lawful request, we will conduct a reasonable search for the requested information. Here are the kinds of information we will agree to produce, depending on the kind of legal process we are served with:
 
-### With user consent
+#### With user consent
 
 The Block Protocol will provide private account information, if requested, directly to the user (or an owner, in the case of an organization account), or to a designated third party with the user's written consent once the Block Protocol is satisfied that the user has verified his or her identity.
 
-### With a subpoena
+#### With a subpoena
 
 If served with a valid subpoena, civil investigative demand, or similar legal process issued in connection with an official criminal or civil investigation, we can provide certain non-public account information, which may include:
 
@@ -144,7 +146,7 @@ In the case of organization accounts, we can provide the name(s) and email addre
 
 Please note that the information available will vary from case to case. Some of the information is optional for users to provide. In other cases, we may not have collected or retained the information.
 
-### With a court order or a search warrant
+#### With a court order or a search warrant
 
 We will not disclose account access logs unless compelled to do so by either:
 
@@ -158,7 +160,7 @@ In addition to the non-public account information listed above, we can provide a
 - user- or IP-specific analytic data such as browsing history; and/or
 - security access logs other than account creation or for a specific time and date.
 
-### Only with a search warrant
+#### Only with a search warrant
 
 We will not disclose the private contents of any account unless compelled to do so under a search warrant issued under the procedures described in the Federal Rules of Criminal Procedure or equivalent state warrant procedures upon a showing of probable cause. In addition to the non-public account information and account access logs mentioned above, we will also provide private account contents in response to a search warrant, which may include:
 
@@ -167,11 +169,11 @@ We will not disclose the private contents of any account unless compelled to do 
 - communications or documentation in private projects;
 - any security keys used for authentication or encryption.
 
-### Under exigent circumstances
+#### Under exigent circumstances
 
 If we receive a request for information under certain exigent circumstances (where we believe the disclosure is necessary to prevent an emergency involving danger of death or serious physical injury to a person), we may disclose limited information that we determine necessary to enable law enforcement to address the emergency. For any information beyond that, we would require a subpoena, search warrant, or court order, as described above. For example, we will not disclose contents of private repositories without a search warrant. Before disclosing information, we confirm that the request came from a law enforcement agency, an authority sent an official notice summarizing the emergency, and how the information requested will assist in addressing the emergency.
 
-## Cost reimbursement
+### Cost reimbursement
 
 Under state and federal law, the Block Protocol can seek reimbursement for costs associated with compliance with a valid legal demand, such as a subpoena, court order or search warrant. We only charge to recover some costs, and these reimbursements cover only a portion of the costs we actually incur to comply with legal orders.
 
@@ -182,11 +184,11 @@ While we do not charge in emergency situations or in other exigent circumstances
 - Production of subscriber information/data for more than 5 accounts: $20 per account
 - Secondary searches: $10 per search
 
-## Data preservation
+### Data preservation
 
 We will take steps to preserve account records for up to 90 days upon formal request from U.S. law enforcement in connection with official criminal investigations, and pending the issuance of a court order or other process.
 
-## Submitting requests
+### Submitting requests
 
 Please serve requests to:
 
@@ -208,10 +210,10 @@ Please make your requests as specific and narrow as possible, including the foll
 
 Please allow at least two weeks for us to be able to look into your request.
 
-## Requests from foreign law enforcement
+### Requests from foreign law enforcement
 
 As a United States company based in New York, the Block Protocol is not required to provide data to foreign governments in response to legal process issued by foreign authorities. Foreign law enforcement officials wishing to request information from the Block Protocol should contact the United States Department of Justice Criminal Division's Office of International Affairs. The Block Protocol will promptly respond to requests that are issued via U.S. court by way of a mutual legal assistance treaty (“MLAT”) or letter rogatory.
 
-## Questions
+### Questions
 
 Do you have other questions, comments or suggestions? Please [contact support](/contact).
