--- a/apps/site/src/_pages/legal/terms/dpa/00_index.mdx
+++ b/apps/site/src/_pages/legal/terms/dpa/00_index.mdx
@@ -12,7 +12,9 @@ topics:
   - Legal
 ---
 
-# Introduction
+# Data Protection Agreement
+
+## Introduction
 
 The parties agree that this Block Protocol Data Protection Agreement (“DPA”) sets forth their obligations with respect to the processing and security of Personal Data and, where explicitly stated in the DPA Terms, Customer Data in connection with the Online Services provided by _HASH, Inc._ ("the Block Protocol" and "Block Protocol").
 
@@ -20,29 +22,29 @@ The DPA (including its Appendix and Attachments) is between the Block Protocol a
 
 In the event of any conflict or inconsistency between the DPA Terms and any other terms in the Block Protocol Customer Agreement, the DPA Terms will prevail. The provisions of the DPA Terms supersede any conflicting provisions of the Block Protocol Privacy Statement that otherwise may apply to processing of Personal Data. For clarity, the Standard Contractual Clauses prevail over any other term of the DPA Terms.
 
-## Applicable DPA Terms and Updates
+### Applicable DPA Terms and Updates
 
-### Limits on Updates
+#### Limits on Updates
 
 When Customer renews or purchases a new subscription to an Online Service, the then-current DPA Terms will apply and will not change during the term of that new subscription for that Online Service.
 
-### New Features, Supplements, or Related Software
+#### New Features, Supplements, or Related Software
 
 Notwithstanding the foregoing limits on updates, when the Block Protocol introduces features, supplements or related software that are new (i.e., that were not previously included with the subscription), the Block Protocol may provide terms or make updates to the DPA that apply to Customer’s use of those new features, supplements or related software. If those terms include any material adverse changes to the DPA Terms, the Block Protocol will provide Customer a choice to use the new features, supplements, or related software, without loss of existing functionality of a generally available Online Service. If Customer does not use the new features, supplements, or related software, the corresponding new terms will not apply.
 
-### Government Regulation and Requirements
+#### Government Regulation and Requirements
 
 Notwithstanding the foregoing limits on updates, the Block Protocol may modify or terminate an Online Service in any country or jurisdiction where there is any current or future government requirement or obligation that (1) subjects the Block Protocol to any regulation or requirement not generally applicable to businesses operating there, (2) presents a hardship for the Block Protocol to continue operating the Online Service without modification, and/or (3) causes the Block Protocol to believe the DPA Terms or the Online Service may conflict with any such requirement or obligation.
 
-## Electronic Notices
+### Electronic Notices
 
 The Block Protocol may provide Customer with information and notices about Online Services electronically, including via email, or through a web site that the Block Protocol identifies. Notice is given as of the date it is made available by the Block Protocol.
 
-## Prior Versions
+### Prior Versions
 
 The DPA Terms provide terms for Online Services that are currently available. For earlier versions of the DPA Terms, Customer may contact its reseller or Block Protocol Account Manager.
 
-# Definitions
+### Definitions
 
 Capitalized terms used but not defined in this DPA will have the meanings provided in the Block Protocol Customer Agreement. The following defined terms are used in this DPA:
 
@@ -84,15 +86,15 @@ For clarity, and as detailed above, data defined as Customer Data, Diagnostic Da
 The above table outlines the various data types defined in the DPA. All Personal Data is processed as a part of one of the other data types (all of
 which also include non-personal data). Support Data is a sub-set of Professional Services Data. Except where explicitly stated otherwise, the DPA Terms exclusively apply to Personal Data.
 
-# General Terms
+## General Terms
 
-## Compliance with Laws
+### Compliance with Laws
 
 The Block Protocol will comply with all laws and regulations applicable to its provision of the Online Services, including security breach notification law and Data Protection Requirements. However, the Block Protocol is not responsible for compliance with any laws or regulations applicable to Customer or Customer’s industry that are not generally applicable to information technology service providers. The Block Protocol does not determine whether Customer Data includes information subject to any specific law or regulation. All Security Incidents are subject to the Security Incident Notification terms below.
 
 Customer must comply with all laws and regulations applicable to its use of Online Services, including laws related to biometric data, confidentiality of communications, and Data Protection Requirements. Customer is responsible for determining whether the Online Services are appropriate for storage and processing of information subject to any specific law or regulation and for using the Online Services in a manner consistent with Customer’s legal and regulatory obligations. Customer is responsible for responding to any request from a third party regarding Customer’s use of an Online Service, such as a request to take down content under the U.S. Digital Millennium Copyright Act, including in accordance with the HASH [Copyrighted Materials (DMCA) Policy](https://hash.ai/legal/copyright), or other applicable laws.
 
-# Data Protection Terms
+### Data Protection Terms
 
 This section of the DPA includes the following subsections:
 
@@ -112,17 +114,17 @@ This section of the DPA includes the following subsections:
 - How to Contact the Block Protocol
 - Appendix A – Security Measures
 
-## Scope
+### Scope
 
 The DPA Terms apply to all Online Services.
 
 Previews may employ lesser or different privacy and security measures than those typically present in the Online Services. Unless otherwise noted, Customer should not use Previews to process Personal Data or other data that is subject to legal or regulatory compliance requirements. The following terms in this DPA do not apply to Previews: Processing of Personal Data; GDPR, Data Security, and California Consumer Privacy Act.
 
-## Nature of Data Processing; Ownership
+### Nature of Data Processing; Ownership
 
 Except as otherwise stated in the DPA Terms, the Block Protocol will use and otherwise process Customer Data and Personal Data as described and subject to the limitations provided below (a) to provide Customer the Online Service in accordance with Customer’s documented instructions, and/or (b) for the Block Protocol’s legitimate business operations incident to delivery of the Online Services to Customer. As between the parties, Customer retains all right, title and interest in and to Customer Data. The Block Protocol acquires no rights in Customer Data other than the rights Customer grants to the Block Protocol in this section. This paragraph does not affect the Block Protocol’s rights in software or services the Block Protocol licenses to Customer.
 
-### Processing to Provide Customer the Online Services
+#### Processing to Provide Customer the Online Services
 
 For purposes of this DPA, “to provide” an Online Service consists of:
 
@@ -134,13 +136,13 @@ For purposes of this DPA, “to provide” an Online Service consists of:
 When providing Online Services, the Block Protocol will use or otherwise process Personal Data only on Customer’s behalf and in accordance with Customer’s
 documented instructions.
 
-### Processing for the Block Protocol’s Legitimate Business Operations
+#### Processing for the Block Protocol’s Legitimate Business Operations
 
 For purposes of this DPA, “the Block Protocol’s legitimate business operations” consist of the following, each as incident to delivery of the Online Services to Customer: (1) billing and account management; (2) compensation (e.g., calculating employee commissions and partner incentives); (3) internal reporting and business modeling (e.g., forecasting, revenue, capacity planning, product strategy); (4) combatting fraud, abuse, cybercrime, or cyber-attacks that may affect the Block Protocol or Online Services; (5) improving the core functionality of accessibility, privacy or energy-efficiency; (6) financial reporting and compliance with legal obligations (subject to the limitations on disclosure of Processed Data outlined below); (7) the creation or management of end user accounts and profiles by the Block Protocol for individual users of Customer (except where Customer creates, manages or otherwise controls such end user accounts or profiles itself); and (8) other purposes pertaining to Personal Data not provided by Customer for storage in Block Protocol projects, workspaces, repositories or in connection with Professional Services.
 
 When processing for the Block Protocol’s legitimate business operations, the Block Protocol will not use or otherwise process Personal Data for: (a) user profiling, (b) advertising or similar commercial purposes, (c) data selling or brokering, or (d) any other purpose, other than for the purposes set out in this section.
 
-## Disclosure of Processed Data
+### Disclosure of Processed Data
 
 The Block Protocol will not disclose or provide access to any Processed Data except: (1) as Customer directs; (2) as described in this DPA; or (3) as required by law. For purposes of this section, “Processed Data” means: (a) Customer Data; (b) Personal Data and (c) any other data processed by the Block Protocol in connection with the Online Service that is Customer’s confidential information under the Block Protocol Customer Agreement. All processing of Processed Data is subject to the Block Protocol’s obligation of confidentiality under the Block Protocol Customer Agreement.
 
@@ -153,13 +155,13 @@ The Block Protocol will not provide any third party: (a) direct, indirect, blank
 
 In support of the above, the Block Protocol may provide Customer’s basic contact information to the third party.
 
-## Processing of Personal Data; GDPR
+### Processing of Personal Data; GDPR
 
 All Personal Data processed by the Block Protocol in connection with the Online Services is obtained as part of either Customer Data, Professional Services Data (including Support Data), Diagnostic Data, or Service Generated Data. Personal Data provided to the Block Protocol by, or on behalf of, Customer through use of the Online Service is also Customer Data. Pseudonymized identifiers may be included in Diagnostic Data or Service Generated Data and are also Personal Data. Any Personal Data pseudonymized, or de-identified but not anonymized, or Personal Data derived from Personal Data is also Personal Data.
 
 To the extent the Block Protocol is a processor or sub-processor of Personal Data subject to the GDPR, the GDPR Related Terms in [Attachment 3](#attachment-3) govern that processing and the parties also agree to the following terms in this sub-section (“Processing of Personal Data; GDPR”):
 
-### Processor and Controller Roles and Responsibilities
+#### Processor and Controller Roles and Responsibilities
 
 Customer and the Block Protocol agree that Customer is the controller of Personal Data and the Block Protocol is the processor of such data, except (a) when Customer acts as a processor of Personal Data, in which case the Block Protocol is a sub-processor; or (b) as stated otherwise in the Block Protocol Customer Agreement or this DPA. When the Block Protocol acts as the processor or sub-processor of Personal Data, it will process Personal Data only on Customer’s behalf and in accordance with documented instructions from Customer. Customer agrees that its Block Protocol Customer Agreement (including the DPA Terms and any applicable updates), along with the product documentation and Customer’s use and configuration of features in the Online Services, are Customer’s complete documented instructions to the Block Protocol for the processing of Personal Data. Information on use and configuration of the Online Services can be found at [blockprotocol.org/docs](https://blockprotocol.org/docs) or a successor location.
 
@@ -169,7 +171,7 @@ warrants to the Block Protocol that Customer’s instructions, including appoint
 
 To the extent the Block Protocol uses or otherwise processes Personal Data subject to the GDPR for the Block Protocol’s legitimate business operations incident to delivery of the Online Services to Customer, the Block Protocol will comply with the obligations of an independent data controller under GDPR for such use. The Block Protocol is accepting the added responsibilities of a data “controller” under the GDPR for processing in connection with its legitimate business operations to: (a) act consistent with regulatory requirements, to the extent required under the GDPR; and (b) provide increased transparency to Customers and confirm the Block Protocol’s accountability for such processing. The Block Protocol employs safeguards to protect Personal Data in processing, including those identified in this DPA and those contemplated in Article 6(4) of the GDPR. With respect to processing of Personal Data under this paragraph, the Block Protocol makes the commitments set forth in the Standard Contractual Clauses set forth in [Attachment 1](#attachment-1) or [Attachment 2](#attachment-2) (as applicable); for those purposes, (i) any Block Protocol disclosure of Personal Data, as described in Annex IV to [Attachment 1](#attachment-1), that has been transferred in connection with the Block Protocol’s legitimate business operations is deemed a “Relevant Disclosure” and (ii) the commitments in Annex IV to [Attachment 1](#attachment-1) apply to such Personal Data.
 
-### Processing Details
+#### Processing Details
 
 The parties acknowledge and agree that:
 
@@ -179,15 +181,15 @@ The parties acknowledge and agree that:
 - **Categories of Data.** The types of Personal Data processed by the Block Protocol when providing the Online Service include: (i) Personal Data that Customer elects to include in Customer Data or Professional Services Data (including, without limitation, Support Data); and (ii) those expressly identified in Article 4 of the GDPR that may be contained in Diagnostic Data or Service Generated Data. The types of Personal Data that Customer elects to include in Customer Data or Professional Services Data (including, without limitation, Support Data) may be any categories of Personal Data identified in records maintained by Customer acting as controller pursuant to Article 30 of the GDPR, including the categories of Personal Data set forth in Annex I to [Attachment 1](#attachment-1).
 - **Data Subjects.** The categories of data subjects are Customer’s representatives and end users, such as employees, contractors, collaborators, and customers, and may include any other categories of data subjects as identified in records maintained by Customer acting as controller pursuant to Article 30 of the GDPR, including the categories of data subjects set forth in Annex I to [Attachment 1](#attachment-1).
 
-### Data Subject Rights; Assistance with Requests
+#### Data Subject Rights; Assistance with Requests
 
 The Block Protocol will make available to Customer, in a manner consistent with the functionality of the Online Service and the Block Protocol’s role as a processor of Personal Data of data subjects, the ability to fulfill data subject requests to exercise their rights under the GDPR. If the Block Protocol receives a request from Customer’s data subject to exercise one or more of its rights under the GDPR in connection with an Online Service for which the Block Protocol is a data processor or sub-processor, the Block Protocol will redirect the data subject to make its request directly to Customer. Customer will be responsible for responding to any such request including, where necessary, by using the functionality of the Online Service. The Block Protocol shall comply with reasonable requests by Customer to assist with Customer’s response to such a data subject request.
 
-### Records of Processing Activities
+#### Records of Processing Activities
 
 To the extent the GDPR requires the Block Protocol to collect and maintain records of certain information relating to Customer, Customer will, where requested, supply such information to the Block Protocol and keep it accurate and up-to-date. the Block Protocol may make any such information available to the supervisory authority if required by the GDPR.
 
-## Data Security
+### Data Security
 
 The Block Protocol will implement and maintain appropriate technical and organizational measures and security safeguards against accidental or unlawful destruction, or loss, alteration, unauthorized disclosure of or access to, Customer Data and Personal Data processed by the Block Protocol on behalf and in accordance with the documented instructions of Customer in connection with the Online Services. The Block Protocol will regularly monitor compliance with these measures and safeguards and will continue to take appropriate steps throughout the term of the Block Protocol Customer Agreement. [Appendix A – Security Safeguards](#appendix-a-security-safeguards) contains a description of the technical and organizational measures and security safeguards implemented by the Block Protocol.
 
@@ -203,7 +205,7 @@ Should Customer be subject to a regulatory or supervisory authority audit or inv
 - Customer is responsible for all costs and fees related to the Block Protocol’s cooperation with the regulatory audit of Customer, including all reasonable costs and fees for any and all time the Block Protocol expends, in addition to the rates for services performed by the Block Protocol.
 - If the report generated from the Block Protocol’s cooperation with the regulatory audit of Customer includes any findings pertaining to the Block Protocol, Customer will share such report, findings, and recommended actions with the Block Protocol where allowed by Customer’s regulators.
 
-## Security Incident Notification
+### Security Incident Notification
 
 If the Block Protocol becomes aware of a breach of security leading to the accidental or unlawful destruction, loss, alteration, unauthorized disclosure of, or access to Customer Data or Personal Data processed by the Block Protocol on behalf and in accordance with the documented instructions of Customer in connection with the Online Services (each a "Security Incident"), the Block Protocol will promptly and without undue delay (1) notify Customer of the Security Incident; (2) investigate the Security Incident and provide Customer with detailed information about the Security Incident; (3) take reasonable steps to mitigate the effects and to minimize any damage resulting from the Security Incident.
 
@@ -215,7 +217,7 @@ The Block Protocol’s notification of or response to a Security Incident under 
 
 Customer must notify the Block Protocol promptly about any possible misuse of its accounts or authentication credentials or any Security Incident related to an Online Service.
 
-## Data Transfers and Location
+### Data Transfers and Location
 
 Personal Data that the Block Protocol processes on behalf and in accordance with the documented instructions of Customer in connection with the Online Services may not be transferred to, or stored and processed in a geographic location except in accordance with the DPA Terms and the safeguards provided below in this section. Taking into account such safeguards, Customer appoints the Block Protocol to transfer Personal Data to the United States or any other country in which the Block Protocol or its Sub-processors operate and to store and process Personal Data to provide the Online Services, except as may be described elsewhere in these DPA Terms.
 
@@ -233,15 +235,15 @@ The Block Protocol will abide by the requirements of applicable European Union, 
 
 Subject to the safeguards described above, the Block Protocol may transfer, store and otherwise process Personal Data to or in jurisdictions and geographic locations worldwide as it, subject to its sole discretion, considers reasonably necessary in connection with the Online Services.
 
-## Data Retention and Deletion
+### Data Retention and Deletion
 
 Upon Customer's reasonable request, unless prohibited by law, the Block Protocol will return or destroy all Customer Data and Personal Data processed by the Block Protocol on behalf and in accordance with the documented instructions of Customer in connection with the Online Services at all locations where it is stored within 30 days of the request, provided that it is no longer needed for providing the Online Services or the purposes for which a data subject had authorized the processing of their Personal Data. The Block Protocol may retain Customer Data or Personal Data to the extent required by the applicable Data Protection Requirements or other applicable law, and only to the extent and for such period as required by the applicable Data Protection Requirements or other applicable law, provided that the Block Protocol will ensure that the Customer Data or Personal Data is processed only as necessary for the purpose specified in the applicable Data Protection Requirements or other applicable law and no other purpose, and the Customer Data or Personal Data remains protected by the Applicable Data Protection Requirements or other applicable law.
 
-## Processor Confidentiality Commitment
+### Processor Confidentiality Commitment
 
 The Block Protocol will ensure that its personnel engaged in the processing of Customer Data and Personal Data on behalf of Customer in connection with the Online Services (i) will process such data only on instructions from Customer or as described in this DPA, and (ii) will be obligated to maintain the confidentiality and security of such data even after their engagement ends. The Block Protocol shall provide periodic and mandatory data privacy and security training and awareness to its employees with access to Customer Data and Personal Data in accordance with applicable Data Protection Requirements or other applicable law and industry standards.
 
-## Notice and Controls on Use of Sub-processors
+### Notice and Controls on Use of Sub-processors
 
 The Block Protocol may hire Sub-processors to provide certain limited or ancillary services on its behalf. Customer consents to this engagement and to the Block Protocol Affiliates as Sub-processors. The above authorizations will constitute Customer’s prior written consent to the subcontracting by the Block Protocol of the processing of Personal Data if such consent is required under applicable law, the Standard Contractual Clauses or the GDPR Related Terms. The Block Protocol is responsible for its Sub-processors’ compliance with the Block Protocol’s obligations in this DPA. The Block Protocol makes available information about Sub-processors on the [Sub-processors page](/legal/privacy/subprocessors) on the Block Protocol website (or a successor location). When engaging any Sub-processor, the Block Protocol will ensure via a written contract that the Sub-processor may access and use Customer Data or Personal Data only to deliver the services the Block Protocol has retained them to provide and is prohibited from using Customer Data or Personal Data for any other purpose. The Block Protocol will ensure that Sub-processors are bound by written agreements that require them to provide at least the level of data protection required of the Block Protocol by the DPA, including the limitations on disclosure of Personal Data. The Block Protocol agrees to oversee the Sub-processors to ensure that these contractual obligations are met.
 
@@ -251,13 +253,13 @@ If Customer does not approve of a new Sub-processor, then Customer may terminate
 
 After termination, the Block Protocol will remove payment obligations for any subscriptions for the terminated Online Service from subsequent invoices to Customer or its reseller.
 
-## Educational Institutions
+### Educational Institutions
 
 If Customer is an educational agency or institution subject to the regulations under the Family Educational Rights and Privacy Act, 20 U.S.C. § 1232g (FERPA), or similar state student or educational privacy laws (collectively “Educational Privacy Laws”), Customer shall not provide Personal Data covered by such Educational Privacy Laws to the Block Protocol without obtaining the Block Protocol’s prior, written and specific consent and entering into a separate agreement with the Block Protocol governing the parties’ rights and obligations with respect to the processing of such Personal Data by the Block Protocol in connection with the Online Services.
 
 Subject to the above, if Customer intends to provide to the Block Protocol Personal Data covered by FERPA, the parties agree and acknowledge that, for the purposes of this DPA, the Block Protocol is a “school official” with “legitimate educational interests” in the Personal Data, as those terms have been defined under FERPA and its implementing regulations. Customer understands that the Block Protocol may possess limited or no contact information for Customer’s students and students’ parents. Consequently, Customer will be responsible for obtaining any student or parental consent for any end user’s use of the Online Services that may be required by applicable law and to convey notification on behalf of the Block Protocol to students (or, with respect to a student under 18 years of age and not in attendance at a postsecondary institution, to the student’s parent) of any judicial order or lawfully-issued subpoena requiring the disclosure of Personal Data in the Block Protocol’s possession as may be required under applicable law.
 
-## CJIS Customer Agreement, HIPAA Business Associate, Biometric Data
+### CJIS Customer Agreement, HIPAA Business Associate, Biometric Data
 
 Except with the Block Protocol’s prior, written and specific consent, Customer shall not provide to the Block Protocol any Personal Data:
 
@@ -268,7 +270,7 @@ Except with the Block Protocol’s prior, written and specific consent, Customer
   Protection of Human Subjects (Common Rule); or
 - covered by state, federal or foreign biometric privacy laws or otherwise constituting biometric information including information on an individual’s physical, physiological, biological or behavioral characteristics or information derived from such information that is used or intended to be used, singly or in combination with each other or with other information, to establish individual identity.
 
-## California Consumer Privacy Act (CCPA) / California Privacy Rights Act (CPRA)
+### California Consumer Privacy Act (CCPA) / California Privacy Rights Act (CPRA)
 
 If and to the extent the Block Protocol is processing Personal Data on behalf and in accordance with the documented instructions of Customer within the scope of the CCPA, the Block Protocol makes the following additional commitments to Customer. The Block Protocol will process the Personal Data on behalf of Customer and will not:
 
@@ -278,7 +280,7 @@ If and to the extent the Block Protocol is processing Personal Data on behalf an
 - retain, use or disclose the Personal Data outside of the direct business relationship with Customer;
 - combine the Personal Data with personal information that it receives from or on behalf of a third party or collects from California residents, except that the Block Protocol may combine Personal Data to perform any business purpose as permitted by the CCPA or any regulations adopted or issued under the CCPA.
 
-## How to Contact the Block Protocol
+### How to Contact the Block Protocol
 
 If Customer believes that the Block Protocol is not adhering to its privacy or security commitments, Customer may contact Block Protocol customer support.
 
@@ -300,7 +302,7 @@ David Wilkinson is the Block Protocol’s data protection representative for the
 > London, WC2H 9JN
 > United Kingdom
 
-# Appendix A - Security Safeguards
+## Appendix A - Security Safeguards
 
 The Block Protocol has implemented and will maintain for Customer Data and Personal Data processed by the Block Protocol on behalf and in accordance with the documented instructions of Customer in connection with the Block Protocol services the following technical and organizational measures and security safeguards, which in conjunction with the security commitments in this DPA (including the GDPR Related Terms), are the Block Protocol's only responsibility with respect to the security of that data:
 
@@ -315,14 +317,14 @@ The Block Protocol has implemented and will maintain for Customer Data and Perso
 | Information Security Incident Management | **Incident Response Process**: <ul> <li>The Block Protocol maintains a record of security incidents with a description of the incidents, the time period, the consequences of the breach, the name of the reporter, and to whom the incident was reported, and details regarding the handling of the incident.</li> <li>In the event that Block Protocol Security confirms or reasonably suspects that a blockprotocol.org customer is affected by a data breach, we will notify the customer without undue delay.</li> <li>The Block Protocol tracks, or enables Customer to track, disclosures of Customer Data, including what data has been disclosed, to whom, and at what time.</li> </ul> **Service Monitoring**. The Block Protocol employs a wide range of continuous monitoring solutions for preventing, detecting, and mitigating attacks to the site.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
 | Business Continuity Management           | <ul> <li>The Block Protocol maintains emergency and contingency plans for the facilities in which Block Protocol information systems that process Customer Data and Personal Data are located.</li> <li>The Block Protocol’s redundant storage and its procedures for recovering data are designed to attempt to reconstruct Customer Data and Personal Data in its original or last-replicated state from before the time it was lost or destroyed.</li> </ul>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
 
-# Attachment 1
+## Attachment 1
 
 **The Standard Contractual Clauses (EU/EEA) Controller to Processor** located at [blockprotocol.org/legal/terms/dpa/attachment-1](/legal/terms/dpa/attachment-1)
 
-# Attachment 2
+## Attachment 2
 
 **International Data Transfer Addendum to the EU Commission Standard Contractual Clauses** located at [blockprotocol.org/legal/terms/dpa/attachment-2](/legal/terms/dpa/attachment-2)
 
-# Attachment 3
+## Attachment 3
 
 **European Union General Data Protection Regulation Terms** located at [blockprotocol.org/legal/terms/dpa/attachment-3](/legal/terms/dpa/attachment-3)
