--- a/apps/site/src/_pages/legal/community/00_index.mdx
+++ b/apps/site/src/_pages/legal/community/00_index.mdx
@@ -9,13 +9,15 @@ topics:
   - Legal
 ---
 
+# Community Guidelines
+
 Our diverse user base brings together different perspectives, ideas, and experiences - and we are all better off for it. We are committed to making the Block Protocol a welcoming place for the different voices and perspectives our community has to offer, while maintaining a safe environment that enables people to be their best.
 
 By outlining what we think a safe, welcoming, and productive community looks like, we hope to help you understand how best to interact and collaborate on our platform in line with our [Terms of Service](/legal/terms) and [Acceptable Use Policies](/legal/acceptable-use).
 
 We encourage our community members to communicate expectations clearly, [moderate](#what-if-something-or-someone-offends-you) their projects where possible, and [report](/legal/acceptable-use/reports) any content that may violate our [policies](/legal/terms). Block Protocol personnel will investigate any reports of abuse, and may moderate public content on our site that we determine to be in violation of our Terms of Service.
 
-## Maintaining a strong community
+### Maintaining a strong community
 
 The primary purpose of the Block Protocol community is to collaborate on creating a world of interconnected blocks and types. We are committed to maintaining a community where users are free to express themselves and challenge one another's ideas, both technical and otherwise. At the same time, it's important that users remain respectful and allow space for others to contribute openly. In order to foster both a safe and productive environment, we encourage our community members to look to these guidelines to inform how they interact on our platform. Below, you’ll find some suggestions for how to have successful interactions as a valued member of the Block Protocol community.
 
@@ -23,7 +25,7 @@ The primary purpose of the Block Protocol community is to collaborate on creatin
 - **Be respectful** - Working in a collaborative environment means disagreements may happen. But remember to criticize ideas, not people. Share thoughtful, constructive criticism and be courteous to those you interact with. If you’re unable to engage respectfully, consider taking a step back or using some of our moderation tools to deescalate a tense situation.
 - **Be empathetic** - The Block Protocol is a global community with people from a wide variety of backgrounds and perspectives, many of which may not be your own. Try to put yourself in others’ shoes and understand their feelings before you address them. Do your best to help make the Block Protocol a community where others feel safe to make contributions, participate in discussions, and share different ideas.
 
-## What if something or someone offends you?
+### What if something or someone offends you?
 
 While some disagreements can be resolved with direct, respectful communication between community members, we understand that is not always the case. We encourage our community to [let us know](/contact) when they believe content or activity they’ve encountered violates our policies. However, if you run into something or someone on the site that you find objectionable, here are some ways the Block Protocol enables you to take action:
 
@@ -34,7 +36,7 @@ While some disagreements can be resolved with direct, respectful communication b
 
 While we are passionate about empowering maintainers to moderate their own projects, please [reach out to us](/contact) if you need additional support in dealing with a situation.
 
-## What happens if someone violates the Block Protocol's policies?
+### What happens if someone violates the Block Protocol's policies?
 
 We rely on reports from the community, as well as proactive detection, to help ensure that the Block Protocol is a safe, welcoming, and productive platform for software developers. There are a variety of factors we consider when we’re made aware of behavior or content not in line with the Block Protocol's policies. However, our policy enforcement and content moderation approach prioritizes our vision to be the home for all developers. This means:
 
@@ -50,10 +52,10 @@ Where we have decided that moderation action is warranted, these are some of the
 - **Hiding** a user account or organization from public view
 - **Suspending** a user account or organization
 
-## Appeal and Reinstatement
+### Appeal and Reinstatement
 
 If your content or account has been disabled or restricted and you seek reinstatement or wish to appeal, please see our [Appeals Policy](/legal/acceptable-use/appeals) for information about the process and use our [contact form](/contact) to submit a request.
 
-## Legal Notices
+### Legal Notices
 
 These are only guidelines; they do not modify our [Terms of Service](/legal/terms) and are not intended to be a complete list. Under those terms, the Block Protocol retains full discretion to remove any content or terminate any accounts for activity that violates our [Acceptable Use Policies](/legal/acceptable-use). These guidelines describe when we will exercise that discretion.
