--- a/apps/site/src/_pages/legal/privacy/3_cookies.mdx
+++ b/apps/site/src/_pages/legal/privacy/3_cookies.mdx
@@ -17,14 +17,14 @@ The Block Protocol provides a great deal of transparency regarding how we use yo
 
 Since the number and names of cookies may change, the table below may be updated from time to time.
 
-## Cookie details
+### Cookie details
 
-<!-- Cookie table -->
+{`Cookie table`}
 
-## Manage your cookie preferences
+### Manage your cookie preferences
 
 You can change your preference about non-essential cookies at any time on this page.
 
-<!-- Cookie preference selection table -->
+{`Cookie preference selection table`}
 
 If you have any questions, cannot see the preference selection interface above, or experience any other difficulty in modifying your cookie preferences, please [contact us](/contact).
