--- a/apps/site/src/_pages/docs/1_developing-blocks.mdx
+++ b/apps/site/src/_pages/docs/1_developing-blocks.mdx
@@ -33,7 +33,7 @@ Currently the three templates are:
 
 You may also use any other language which can be transpiled to JavaScript. As an example, see [this blog post](https://hash.dev/blog/build-blocks-in-any-language) on writing a block using F#. This block uses React – you can use transpiled JavaScript in blocks defined as HTML files or custom elements too.
 
-The sections below assume, that you're using the `react` template.
+The sections below assume that you're using the `react` template.
 
 ### I don’t want to use TypeScript
 
