Apply suggestions from code review
Co-authored-by: Ciaran Morinan <c@hash.ai>

--- a/apps/site/src/_pages/docs/1_developing-blocks.mdx
+++ b/apps/site/src/_pages/docs/1_developing-blocks.mdx
@@ -28,7 +28,7 @@ If you want to write blocks **using other technologies or frameworks**, we provi
 Currently the three templates are:
 
 1.  `react` - the default template which uses React and has a suite of helpful hooks you can use.
-1.  `custom-element` - create a block defined as a custom element (also known as Web Components). You can use this with different approaches when constructing the element-i.e. use a custom element as a wrapper for anything else you like.
+1.  `custom-element` - create a block defined as a custom element (also known as Web Components), which is based on [Lit](https://lit.dev/). You can also use different approaches when constructing the element-i.e. use a custom element as a wrapper for anything else you like.
 1.  `html` - give up some of the ecosystem to roll-your-own, import and use additional libraries inside the `<script>` tag.
 
 You may also use any other language which can be transpiled to JavaScript. As an example, see [this blog post](https://hash.dev/blog/build-blocks-in-any-language) on writing a block using F#. This block uses React – you can use transpiled JavaScript in blocks defined as HTML files or custom elements too.
