Make ordering of `npm run` and `yarn` consistent

--- a/apps/site/src/_pages/docs/1_developing-blocks.mdx
+++ b/apps/site/src/_pages/docs/1_developing-blocks.mdx
@@ -419,7 +419,7 @@ To publish a block on the Hub take the following steps.
 
 ### Publish from your terminal
 
-- Run `npm run build` or `yarn build` to create a production build of your block (it will appear in the `dist` folder)
+- Run `yarn build` or `npm run build` to create a production build of your block (it will appear in the `dist` folder)
 - run `npx blockprotocol@latest publish` to generate a `.blockprotocolrc` file when prompted
 - Replace the placeholder key in that file with your API key
 - now run `npx blockprotocol@latest publish` again
@@ -428,7 +428,7 @@ To publish a block on the Hub take the following steps.
 ### Updating your block
 
 You can update your published block at any time by running
-`npm run build && npx blockprotocol@latest publish` or `yarn build && npx blockprotocol@latest publish`
+`yarn build && npx blockprotocol@latest publish` or `npm run build && npx blockprotocol@latest publish`
 
 ### Have your block verified
 
